KubernetesVersion/LeanKubernetesOnLinux/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-page-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: therealmileslee.github.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-page-service
            port:
              number: 80
  tls:
  - hosts:
    - therealmileslee.github.io
    secretName: web-page-tls
